<resources>
    <string name="app_name">Spending</string>
    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_registered">Registered</string>
    <string name="hint_name">Item\'s name</string>
    <string name="register_new_item">Register new item</string>
    <string name="new_item_register_name">Name</string>
    <string name="new_item_register_price">Price</string>
    <string name="new_item_register_description">Description</string>
    <string name="description_hint">Item\'s description</string>
    <string name="price_hint">0.00</string>
    <string name="register_button">Register</string>
    <string name="please_wait_message">Please, wait..</string>
    <string name="registering_new_product_message">Registering new product</string>
    <string name="success_title">Success</string>
    <string name="fail_to_register_title">Fail to register</string>
    <string name="invalid_name_message">Invalid name</string>
    <string name="invalid_price_message">Invalid price</string>
    <string name="invalid_description_message">Invalid description</string>
    <string name="new_item_registered_message">New item registered</string>
    <string name="removing_product_message">Removing product</string>
    <string name="item_removed_message">Item removed</string>
    <string name="fail_to_remove_title">Fail to remove item</string>
</resources>
