<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="30dp"
              tools:context="com.ribeiro.gabriel.compras.application.fragments.RegisterFragment">

    <TextView
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/register_new_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="15sp"
                android:text="@string/new_item_register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:textSize="15sp"
                android:id="@+id/name_new_item"
                android:hint="@string/hint_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="15sp"
                android:text="@string/new_item_register_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:textSize="15sp"
                android:hint="@string/price_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/price_new_item"/>
    </LinearLayout>

    <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="15sp"
                android:text="@string/new_item_register_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/description_hint"
                android:ems="10"
                android:id="@+id/description_new_item"/>

    </LinearLayout>

    <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/register_product"
                android:layout_alignParentBottom="true"
                android:textSize="15sp"
                android:text="@string/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </RelativeLayout>


</LinearLayout>
